[package]
name = "adtobs"
description = "A Rust crate for effortless conversion of dates between the Gregorian (English) calendar and the Nepali calendar (Bikram Sambat)."
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/amrit073/adtobs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.8.3"

